--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ html, body {
 
 .main__profile-background {
    background-image: url('images/bg-pattern-card.svg');
+   background-repeat: no-repeat;
+   background-size: cover;
    width: 100%;
    height: 8.5rem;
    border-top-left-radius: 10px;
@@ -78,6 +80,12 @@ html, body {
 .main__city {
     margin-top: 1rem;
     color: gray;
+}
+
+@media only screen and (max-width: 956px) {
+    .main {
+        width: 60%;
+    }
 }
 
 /* DATA CONTENT STYLING */
